; ModuleID = '/home/carl/AnghaBench/micropython/extmod/nimble/nimble/extr_npl_os.c_ble_npl_mutex_pend.c'
source_filename = "/home/carl/AnghaBench/micropython/extmod/nimble/nimble/extr_npl_os.c_ble_npl_mutex_pend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ble_npl_mutex = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"ble_npl_mutex_pend(%p, %u) locked=%u\0A\00", align 1
@BLE_NPL_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ble_npl_mutex_pend(%struct.ble_npl_mutex* %0, i64 %1) #0 {
  %3 = alloca %struct.ble_npl_mutex*, align 8
  %4 = alloca i64, align 8
  store %struct.ble_npl_mutex* %0, %struct.ble_npl_mutex** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.ble_npl_mutex*, %struct.ble_npl_mutex** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = trunc i64 %6 to i32
  %8 = load %struct.ble_npl_mutex*, %struct.ble_npl_mutex** %3, align 8
  %9 = getelementptr inbounds %struct.ble_npl_mutex, %struct.ble_npl_mutex* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @DEBUG_MUTEX_printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), %struct.ble_npl_mutex* %5, i32 %7, i32 %10)
  %12 = load %struct.ble_npl_mutex*, %struct.ble_npl_mutex** %3, align 8
  %13 = getelementptr inbounds %struct.ble_npl_mutex, %struct.ble_npl_mutex* %12, i32 0, i32 0
  store i32 1, i32* %13, align 4
  %14 = load i32, i32* @BLE_NPL_OK, align 4
  ret i32 %14
}

declare dso_local i32 @DEBUG_MUTEX_printf(i8*, %struct.ble_npl_mutex*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
